<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/background1"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:text="@string/temp"
        android:textColor="@color/colorroge"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button2"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="busuivant"
        android:text="@string/taakid"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/button4"
        android:layout_width="104dp"
        android:layout_height="62dp"
        android:background="@drawable/button_background"
        android:onClick="corrige"
        android:text="@string/tashih"
        android:textColor="@color/colorroge"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/button3"
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="pause"
        android:text="@string/taw9if_lwa9t"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/button8"
        android:layout_width="105dp"
        android:layout_height="58dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="tree"
        android:text="@string/_3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <Button
        android:id="@+id/button11"
        android:layout_width="99dp"
        android:layout_height="59dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="two"
        android:text="@string/_2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <Button
        android:id="@+id/button10"
        android:layout_width="104dp"
        android:layout_height="57dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="one"
        android:text="@string/_1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="foor"
        android:text="@string/_4"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="235dp"
        android:layout_height="67dp"
        android:text="@string/question_1"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/button5"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="intero"
        android:text="@string/soual_ghayr_mafhom"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="418dp"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banners_ad_maintActivity2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>