<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Roaya">

    <Button
        android:id="@+id/button2"
        android:layout_width="91dp"
        android:layout_height="54dp"
        android:background="@drawable/button_background"
        android:onClick="busuivant"
        android:text="تاكيد"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/button3"
        android:layout_width="98dp"
        android:layout_height="54dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="pause"
        android:text="@string/taw9if_lwa9t"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/button4"
        android:layout_width="101dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:onClick="corrige"
        android:text="@string/tashih"
        android:textSize="20sp"
        android:textColor="@color/colorroge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />


    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="one"
        android:text="@string/_1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="two"
        android:text="@string/_2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="tree"
        android:text="@string/_3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="foor"
        android:text="@string/_4"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />


    <Button
        android:id="@+id/button5"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:onClick="intero"
        android:text="@string/soual_ghayr_mafhom"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <ImageView
        android:id="@+id/imageViewtajawoz"
        android:layout_width="match_parent"
        android:layout_height="289dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="235dp"
        android:layout_height="67dp"
        android:text="@string/question_1"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="74dp"
        android:layout_height="60dp"
        android:textColor="@color/colorroge"
        android:text="@string/temp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>