<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colortouch"
    tools:context=".CorrigeIsaafat">

    <Button
        android:id="@+id/button6"
        android:layout_width="131dp"
        android:layout_height="37dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="710dp"
        android:background="@drawable/button_background"
        android:textColor="@color/colorAccent"
        android:drawableEnd="@android:drawable/ic_menu_rotate"
        android:onClick="replay"
        android:text="@string/replay"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="393dp"
        android:layout_height="39dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/resultat"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/listview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ScrollView>

    <ListView
        android:id="@+id/listview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="76dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="870px"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/listview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>